--- a/zed/settings.json
+++ b/zed/settings.json
@@ -12,7 +12,7 @@
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "One Dark"
+    "dark": "Gruvbox Dark Hard"
   },
   "vim_mode": true
 }
